# OpenHands-SDK-Playground

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
config/: agents.yaml  settings.yaml
src/lab/: __init__.py  __main__.py
src/lab/core/: __init__.py  config.py  runtime.py  sandbox.py  session.py
src/lab/tools/: __init__.py  base.py  github_fetcher.py  import_sdk_example.py  loader.py  word_count.py
src/lab/ui/: __init__.py  main.py
src/lab/utils/: __init__.py  events.py  sdk_examples.py  watcher.py
tests/: __init__.py  test_config.py  test_integration.py  test_sandbox.py  test_sdk_examples.py  test_tools.py
tests/fixtures/: README.md
tests/fixtures/insecure_app/: app.py  config.py
tests/fixtures/js_project/: component.js  config.js  utils.js
