[project]
name = "openhands-lab"
version = "0.1.0"
description = "A local-first playground for exploring the OpenHands SDK"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "openhands-sdk>=1.16.0",
    "openhands-tools>=1.16.0",
    "openhands-workspace>=1.16.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "streamlit>=1.30",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
lab = "lab.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
